@@ -71,6 +71,10 @@
    - provos@cvs.openbsd.org 2002/03/18 17:59:09
      [sshd.8]
      document UsePrivilegeSeparation
+   - stevesk@cvs.openbsd.org 2002/03/18 23:52:51
+     [servconf.c]
+     UnprivUser/UnprivGroup usable now--specify numeric user/group; ok
+     provos@
 
 20020317
  - (tim) [configure.ac] Assume path given with --with-pid-dir=PATH is wanted,
@@ -7917,4 +7921,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1945 2002/03/22 02:37:50 mouring Exp $
+$Id: ChangeLog,v 1.1946 2002/03/22 02:40:03 mouring Exp $
